# blink

./: .gitignore  CMakeLists.txt  README.md
examples/: fuzzing.bk.yaml  hworld.bk.yaml  invalid-sub.bk.yaml  program.bk.yaml  simple.bk.yaml  test.bk.yaml  test2.bk.yaml  types.bk.yaml
src/: blink.c  blink.h  blink_core.h  main.c
src/internal/: strhashmap.c  strhashmap.h
src/internal/yaml/: yaml.h
src/std/: bkstdlib.c
src/yaml/: api.c
